--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -6,10 +6,13 @@
 	</head>
 	<body>
 		<h1> ChainBlock Ver. 1.0 </h1>
-		<button id = "preferences"> Preferences </button>
-		<button id = "block"> Block </button>
-		<button id = "unblock"> Unblock </button>
-		<button id = "blockList"> View Block list </button>
-		<button id = "github"> GitHub </button>
+		<div class = "box">
+			<button id = "preferences"> Preferences </button>
+			<button id = "block"> Block </button>
+			<button id = "unblock"> Unblock </button>
+			<button id = "blockList"> View Block list </button>
+			<button id = "github"> GitHub </button>
+			<!-- <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> -->
+		</div>
 	</body>
 </html>
