--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -14,5 +14,10 @@
 			<button id = "github"> GitHub </button>
 			<!-- <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> -->
 		</div>
+		
+		<!-- Embed all scripts -->
+		<script src="ChainBlock/block.js"></script>
+		
+		
 	</body>
 </html>
