--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -8,15 +8,14 @@
 		<h1> ChainBlock Ver. 1.0 </h1>
 		<div class = "box">
 			<button id = "preferences"> Preferences </button>
-			<button id = "block"> Block </button>
 			<button id = "unblock"> Unblock </button>
 			<button id = "blockList"> View Block list </button>
-			<button id = "github"> GitHub </button>
+			<button id = "github"> <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> </button>
 			<!-- <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> -->
 		</div>
 		
 		<!-- Embed all scripts -->
-		<script src="ChainBlock/block.js"></script>
+		<script src="ChainBlock/unblock.js"></script>
 		
 		
 	</body>
