--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>ChainBlock Popup</title>
+		<target = "_blank">
 		<link rel = "stylesheet" href = "stylesheet.css">
 	</head>
 	<body>
@@ -10,8 +11,10 @@
 			<button id = "preferences"> Preferences </button>
 			<button id = "unblock"> Unblock </button>
 			<button id = "blockList"> View Block list </button>
-			<button id = "github"> <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> </button>
-			<!-- <a href = "https://github.com/jmale021/ChainBlock"> GitHub </a> -->
+			<!-- <button onclick="https://github.com/jmale021/ChainBlock"> GitHub </button> -->
+			<button > <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> </button>
+			<!-- <a href = "https://github.com/jmale021/ChainBlock"> <button id = "github"> GitHub </button> </a>  -->
+			<!-- <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> -->
 		</div>
 		
 		<!-- Embed all scripts -->
