--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -2,14 +2,24 @@
 <html>
 	<head>
 		<title>ChainBlock Popup</title>
+		<target = "_blank">
 		<link rel = "stylesheet" href = "stylesheet.css">
 	</head>
 	<body>
 		<h1> ChainBlock Ver. 1.0 </h1>
-		<button id = "preferences"> Preferences </button>
-		<button id = "block"> Block </button>
-		<button id = "unblock"> Unblock </button>
-		<button id = "blockList"> View Block list </button>
-		<button id = "github"> GitHub </button>
+		<div class = "box">
+			<button id = "preferences"> Preferences </button>
+			<button id = "unblock"> Unblock </button>
+			<button id = "blockList"> View Block list </button>
+			<!-- <button onclick="https://github.com/jmale021/ChainBlock"> GitHub </button> -->
+			<button > <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> </button>
+			<!-- <a href = "https://github.com/jmale021/ChainBlock"> <button id = "github"> GitHub </button> </a>  -->
+			<!-- <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> -->
+		</div>
+		
+		<!-- Embed all scripts -->
+		<script src="ChainBlock/unblock.js"></script>
+		
+		
 	</body>
 </html>
