--- a/ChainBlock/popup.html
+++ b/ChainBlock/popup.html
@@ -10,15 +10,16 @@
 		<div class = "box">
 			<button id = "preferences"> Preferences </button>
 			<button id = "unblock"> Unblock </button>
-			<button id = "blockList"> View Block list </button>
+			<button> <a href = "../unblock.html" target = "_blank"> Unblock </button>
+			<!-- <button id = "blockList"> View Block list </button> -->
 			<!-- <button onclick="https://github.com/jmale021/ChainBlock"> GitHub </button> -->
-			<button > <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> </button>
+			<button> <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> </button>
 			<!-- <a href = "https://github.com/jmale021/ChainBlock"> <button id = "github"> GitHub </button> </a>  -->
 			<!-- <a href = "https://github.com/jmale021/ChainBlock" target = "_blank"> GitHub </a> -->
 		</div>
 		
 		<!-- Embed all scripts -->
-		<script src="ChainBlock/unblock.js"></script>
+		<!-- <script src="ChainBlock/unblock.js"></script> -->
 		
 		
 	</body>
